added booking and cancellation features

--- a/Softablitz_project/nbproject/project.properties
+++ b/Softablitz_project/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.jTable-2.4.0.jar=C:\\Users\\ABHINAV ANAND\\Downloads\\jar_files\\
 file.reference.JTimeChooser_0.1.0.jar=C:\\Users\\ABHINAV ANAND\\Downloads\\JTimeChooser_0.1.0.jar
 file.reference.mysql-connector-java-5.1.49-bin.jar=C:\\Users\\ABHINAV ANAND\\Downloads\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49-bin.jar
 file.reference.mysql-connector-java-5.1.49.jar=C:\\Users\\ABHINAV ANAND\\Downloads\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49.jar
+file.reference.rs2xml.jar=C:\\Users\\ABHINAV ANAND\\Downloads\\rs2xml.jar
 file.reference.swingx-0.9.5-RELEASE71.jar=C:\\Users\\ABHINAV ANAND\\Downloads\\swingx-0.9.5-RELEASE71.jar
 includes=**
 jar.compress=false
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.swingx-0.9.5-RELEASE71.jar}:\
     ${file.reference.jTable-2.4.0.jar}:\
     ${file.reference.beansbinding-1.2.1.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
